fix: Open dropdown does not hide overflow

--- a/src/styles/_dropdown.scss
+++ b/src/styles/_dropdown.scss
@@ -24,6 +24,7 @@
       opacity: 1;
       max-height: 100vh;
       transition: all 0.3s ease;
+      overflow: visible;
       transform: none !important;
     }
   }
